# Rusted-warfare-map-generator

./: .gitignore  POLYGON_WALLS_IMPLEMENTATION.md  elevation-rework.md  generated_map.tmx  generator_blueprint.tmx  generator_blueprint1.tmx  generator_blueprint2.tmx  generator_blueprint3.tmx  generator_blueprint4.tmx  generator_blueprint5.tmx  generator_gui.py  generator_main.py  map_pipeline.py  polygon-walls.md  procedural_map_generator_functions.py  pyi_rthook_stdio.py  requirements.txt  tileset_renderer.py  wizard_gui.py  wizard_state.py
desktop/: bridge.py  generator_blueprint5.tmx  generator_main.py  wizard_gui.py  wizard_gui.spec
web/: .gitignore  eslint.config.mjs  package-lock.json  package.json
web/public/python/: bridge.py  map_pipeline.py  procedural_map_generator_functions.py
web/public/wasm-pkg/: package.json  rust_map_gen.d.ts  rust_map_gen.js  rust_map_gen_bg.wasm  rust_map_gen_bg.wasm.d.ts
web/rust-map-gen/: Cargo.toml
web/rust-map-gen/src/: lib.rs  pipeline.rs  state.rs  tiles.rs
web/rust-map-gen/src/algorithms/: coastline.rs  decoration.rs  mod.rs  perlin.rs  placement.rs  smoothing.rs  terrain.rs  tmx.rs
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: LoadingScreen.tsx  MapCanvas.tsx  NumberInput.tsx  QuickGeneratePage.tsx  StepBar.tsx  WizardApp.tsx
web/src/components/steps/: CoastlineStep.tsx  FinalizeStep.tsx  (+4 more)
web/src/hooks/: useMapEngine.ts  usePyodide.ts  useWizardState.ts
web/src/lib/: canvasRenderer.ts  polygonUtils.ts  tilesetExtractor.ts  types.ts
web/src/workers/: pyodide.worker.ts  wasm.worker.ts
