[package]
name = "rust-map-gen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
flate2 = "1"
base64 = "0.22"
xmltree = "0.11"
